--- a/projects/jtProject/package.json
+++ b/projects/jtProject/package.json
@@ -27,5 +27,8 @@
     "gulp-uglifyjs": "^0.6.2",
     "spritesh": "^1.2.0",
     "svgo": "^1.0.3"
+  },
+  "dependencies": {
+    "virtual-scroll": "^1.3.1"
   }
 }
