--- a/projects/jtProject/package.json
+++ b/projects/jtProject/package.json
@@ -29,6 +29,7 @@
     "svgo": "^1.0.3"
   },
   "dependencies": {
+    "medium-editor-insert-plugin": "^2.4.1",
     "virtual-scroll": "^1.3.1"
   }
 }
